--- a/.env
+++ b/.env
@@ -7,3 +7,8 @@ BRONZE_BUCKET=bronze
 BRONZE_PREFIX=
 SILVER_BUCKET=silver
 GOLD_BUCKET=gold
+POSTGRES_HOST="localhost"
+POSTGRES_PORT="5432"
+POSTGRES_USER="postgres"
+POSTGRES_PASSWORD="postgres123"
+POSTGRES_DB="postgres"
